hopefully fixed width issues on mobile

--- a/assets/css/lists.css
+++ b/assets/css/lists.css
@@ -3,7 +3,6 @@ li p {
 }
 
 .fixed-width {
-    width: 12.5%;
+    width: 5.3em;
     display: inline-block;
-    min-width: initial;
 }
